--- a/todo-frontend/Dockerfile
+++ b/todo-frontend/Dockerfile
@@ -13,17 +13,15 @@ RUN yum install -y --disableplugin=subscription-manager --nodocs \
 
 COPY nginx.conf /etc/nginx/
 
-RUN touch /run/nginx.pid 
-RUN chgrp -R 0 /var/log/nginx /run/nginx.pid 
-RUN chmod -R g+rwx /var/log/nginx /run/nginx.pid
+RUN touch /run/nginx.pid \ 
+&& chgrp -R 0 /var/log/nginx /run/nginx.pid \ 
+&& chmod -R g+rwx /var/log/nginx /run/nginx.pid
   
 COPY src/ /usr/share/nginx/html
 
 EXPOSE 8080
 
 USER 1001
-
-USER nginx
 
 CMD nginx -g "daemon off;"
 
